changes in en file

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
 
-    "name": "Jatana - Artificial Intelligence for Zendesk Support",
+    "name": "Jatana",
 
     "short_description": "Boost Productivity With Macro Suggestions, Automatic Replies and Much More!",
 
