--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
 
-    "name": "Jatana Ai",
+    "name": "Jatana",
 
     "short_description": "Boost Automation With Ai Macro Suggestions, Ticket Tagging, and Agent Routing!",
 
